editors/tree-sitter-jake/grammar.js
    source_file: ($) =>
      seq(optional(seq($.shebang, $._newline)), repeat($._item)),

    // Jake items - recipes and top-level directives
    _item: ($) =>
      choice(
        $.recipe,
        $.assignment,
        $.import_statement,
        $.global_directive,
      ),

    // Jake assignment: NAME = expression (or NAME := expression for compatibility)
    assignment: ($) =>
      seq(
        field("name", $.identifier),
        choice("=", ":="),
        field("value", $.expression),
        $._newline,
      ),

    // Jake import: @import "file.jake" as namespace [rooted]
    import_statement: ($) =>
      seq(
        "@import",
        field("path", $.string),
        optional(seq("as", field("namespace", $.identifier))),
        field("rooted", optional("rooted")),
        $._newline,
      ),

    // Jake global directives (top-level, not indented)
    global_directive: ($) =>
      choice(
        $.dotenv_directive,
        $.require_directive,
        $.export_directive,
        $.default_directive,
        $.rooted_directive,
        $.global_hook,
      ),

    // @dotenv or @dotenv .env.local
    dotenv_directive: ($) =>
      seq(
        "@dotenv",
        optional(field("path", choice($.string, $.identifier))),
        $._newline,
      ),

    // @require VAR1 VAR2
    require_directive: ($) =>
      seq(
        "@require",
        repeat1(field("variable", $.identifier)),
        $._newline,
      ),

    // @export VAR = value or @export VAR
    export_directive: ($) =>
      seq(
        "@export",
        field("name", $.identifier),
        optional(seq("=", field("value", $.expression))),
        $._newline,
      ),

    // @default (marks next recipe as default)
    default_directive: (_) => seq("@default", /\s*\n/),

    // @rooted (resolve recipe file paths relative to this jakefile)
    global_hook: ($) =>
      choice(
        seq(
          choice("@pre", "@post", "@on_error"),
          field("command", $.hook_command),
          $._newline,
        ),
        seq(
          choice("@before", "@after"),
          field("target", $.identifier),
          field("command", $.hook_command),
          $._newline,
        ),
      ),

    // Command text for hooks (everything until newline)
    hook_command: ($) => repeat1(choice($.text, $.interpolation, /[^\n]+/)),

    // expression    : 'if' condition '{' expression '}' 'else' '{' expression '}'
    //               | value '/' expression
    //               | value '+' expression
    //               | value
    expression: ($) => seq(optional("/"), $._expression_inner),

    _expression_inner: ($) =>
      choice(
        $.if_expression,
        prec.left(2, seq($._expression_recurse, "+", $._expression_recurse)),
        prec.left(1, seq($._expression_recurse, "/", $._expression_recurse)),
        $.value,
      ),

    // We can't mark `_expression_inner` inline because it causes an infinite
    // loop at generation, so we just alias it.
    value: ($) =>
      prec.left(
        choice(
          $.function_call,
          $.external_command,
          $.identifier,
          $.string,
          $.shell_variable,
          $.numeric_error,
          seq("(", $.expression, ")"),
        ),
      ),

    // Shell/positional variables: $1, $@, $VAR, ${VAR}
    function_call: ($) =>
      seq(
        field("name", $.identifier),
        "(",
        optional(field("arguments", $.sequence)),
        ")",
      ),

    external_command: ($) =>
      choice(seq($._backticked), seq($._indented_backticked)),

    // sequence      : expression ',' sequence
    //               | expression ','?
    sequence: ($) => comma_sep1($.expression),

    recipe: ($) =>
      seq(
        repeat($.recipe_attribute),
        $.recipe_header,
        $._newline,
        optional($.recipe_body),
      ),

    // Recipe metadata directives (@group, @desc, @alias, @needs, @quiet, @platform, etc.)
    recipe_attribute: ($) =>
      choice(
        seq("@group", field("name", choice($.identifier, $.string)), $._newline),
        seq("@desc", field("text", $.string), $._newline),
        seq("@alias", repeat1(field("name", $.identifier)), $._newline),
        seq("@quiet", $._newline),
        seq("@silent", $._newline),
        seq("@platform", repeat1(field("platform", $.identifier)), $._newline),
        seq("@needs", repeat1(choice(
          seq($.identifier, $.string, "->", $.identifier),  // cmd "hint" -> install_task
          seq($.identifier, "->", $.identifier),  // cmd -> install_task
          seq($.identifier, $.string),             // cmd "install hint"
          $.identifier,                            // just cmd
        )), $._newline),
      ),

    recipe_header: ($) =>
      seq(
        optional(field("type", choice("task", "file"))),
        field("name", $.identifier),
        optional($.parameters),
        ":",
        optional($.dependencies),
      ),

    dependencies: ($) =>
      seq(
        "[",
        optional(seq(
          $.dependency,
          repeat(seq(",", $.dependency)),
          optional(","),
        )),
        "]",
      ),

    // dependency: identifier or namespaced (namespace:recipe)
    dependency: ($) => field("name", $.dependency_name),

    // Dependency name can include namespace prefix (ns:recipe or ns.recipe)
    dependency_name: (_) => /[a-zA-Z_][a-zA-Z0-9_:-]*/,

    // body : INDENT (directive | command)+ DEDENT
    recipe_body: ($) =>
      seq(
        $._indent,
        optional(seq(field("shebang", $.shebang), $._newline)),
        repeat(choice(
          seq($.body_directive, $._newline),
          seq($.command_line, $._newline),
          $._newline,
        )),
        $._dedent,
      ),

    // Body directives: @if, @elif, @else, @end, @each, @cd, etc.
    body_directive: ($) =>
      choice(
        $.if_directive,
        $.elif_directive,
        $.else_directive,
        $.end_directive,
        $.each_directive,
        $.cd_directive,
        $.cache_directive,
        $.watch_directive,
        $.confirm_directive,
        $.ignore_directive,
        $.shell_directive,
        $.timeout_directive,
        $.launch_directive,
        $.body_needs_directive,
        $.body_require_directive,
        $.body_export_directive,
        $.body_hook,
      ),

    // @if condition
    if_directive: ($) =>
      seq("@if", field("condition", $.condition_expression)),

    // @elif condition
    elif_directive: ($) =>
      seq("@elif", field("condition", $.condition_expression)),

    // @else
    else_directive: (_) => "@else",

    // @end
    end_directive: (_) => "@end",

    // @each item1 item2 item3 or @each {{variable}} or @each 10 50 100
    each_directive: ($) =>
      seq("@each", repeat1(choice($.identifier, $.interpolation, $.number))),

    // Simple number for @each
    cd_directive: ($) =>
      seq("@cd", field("path", choice($.string, $.file_path, $.interpolation))),

    // @cache file1 file2
    cache_directive: ($) =>
      seq("@cache", repeat1(field("path", choice($.string, $.glob_pattern, $.file_path)))),

    // @watch pattern
    watch_directive: ($) =>
      seq("@watch", repeat1(field("pattern", choice($.string, $.glob_pattern, $.file_path)))),

    // @confirm "message" or @confirm unquoted message with {{interpolation}}
    confirm_directive: ($) =>
      seq("@confirm", optional(field("message", choice(
        $.string,
        repeat1(choice($.text, $.interpolation, /[^\n]+/)),
      )))),

    // @ignore
    ignore_directive: (_) => "@ignore",

    // @shell bash
    shell_directive: ($) =>
      seq("@shell", field("shell", $.identifier)),

    // @timeout 30s or @timeout 5m or @timeout 1h
    body_needs_directive: ($) =>
      seq("@needs", $._needs_item, repeat(seq(optional(","), $._needs_item))),

    _needs_item: ($) =>
      choice(
        seq($.identifier, "->", $.identifier),  // cmd -> install_task
        seq($.identifier, $.string),             // cmd "install hint"
        $.identifier,                            // just cmd
      ),

    // @require VAR (inside recipe body)
    body_require_directive: ($) =>
      seq("@require", repeat1(field("variable", $.identifier))),

    // @export VAR = value (inside recipe body)
    body_export_directive: ($) =>
      seq(
        "@export",
        field("name", $.identifier),
        optional(seq("=", field("value", $.expression))),
      ),

    // @pre, @post hooks inside recipe body
    body_hook: ($) =>
      seq(
        choice("@pre", "@post"),
        field("command", repeat1(choice($.text, $.interpolation, /[^\n]+/))),
      ),

    // Condition expression for @if/@elif
    condition_expression: ($) =>
      choice(
        // Function calls: env(VAR), exists(path), eq(a, b), neq(a, b)
        $.condition_function,
        // Simple identifier
        $.identifier,
      ),

    condition_function: ($) =>
      seq(
        field("name", choice(
          // Environment and file checks
          "env", "exists", "eq", "neq", "command",
          // Runtime state checks
          "is_watching", "is_dry_run", "is_verbose",
          // Platform checks
          "is_macos", "is_linux", "is_windows", "is_unix", "is_platform",
        )),
        "(",
        optional(field("arguments", $.sequence)),
        ")",
      ),

    // Glob pattern (contains * or **)
    glob_pattern: (_) => /[a-zA-Z0-9_.*\/\-]+\*[a-zA-Z0-9_.*\/\-]*/,

    // File path (for @cache, @watch - can contain dots, slashes, etc.)
    file_path: (_) => /[a-zA-Z0-9_.\/-]+/,

    // Command line in recipe body
    command_line: ($) =>
      seq(
        optional($.command_prefix),
        repeat1(choice($.text, $.interpolation)),
      ),

    // Command prefix: @ (quiet), - (ignore errors), or combination
    command_prefix: (_) => choice("@-", "-@", "@", "-"),

    // Any shebang. Needs a named field to apply injection queries correctly.
    string: ($) =>
      choice(
        $._string_indented,
        $._raw_string_indented,
        $._string,
        // _raw_string, can't be written as a separate inline for osm reason
        /'[^']*'/,
      ),

    _raw_string_indented: (_) => seq("'''", repeat(/[^']+|'[^']|''[^']/), "'''"),
    // Double-quoted strings support interpolation and escape sequences
    _string: ($) => seq('"', repeat(choice($.escape_sequence, $.interpolation, /[^\\"{]+/)), '"'),
    // Indented strings also support interpolation
    _string_indented: ($) =>
      seq('"""', repeat(choice($.escape_sequence, $.interpolation, /[^\\"{]+/)), '"""'),

    escape_sequence: (_) => ESCAPE_SEQUENCE,

    _backticked: ($) => seq("`", optional($.command_body), "`"),
    _indented_backticked: ($) => seq("```", optional($.command_body), "```"),

    command_body: ($) => repeat1(choice($.interpolation, /./)),

    // interpolation : '{{' expression '}}'
    interpolation: ($) => seq("{{", $.expression, "}}"),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_-]*/,

    // Numbers aren't allowed as values, but we capture them anyway as errors so
    // they don't mess up the whole syntax
